--- a/events/src/app/events/event-thumbnail.component.html
+++ b/events/src/app/events/event-thumbnail.component.html
@@ -1,13 +1,23 @@
-<div class="well hoverwll thumbanil">
-  <h2>{{event.name}}</h2>
-  <div>Date: {{event.date}}</div>
-  <div>Time: {{event.time}}</div>
-  <div>Price: ${{event.price}}</div>
-  <div>
-    <span>Loaction: {{event.location.address}}</span>
-    <span>@nbsp;</span>
-    <span>{{event.location.city}}, {{event.location.country}}</span>
+<div [routerLink]="['/events',event.id]" routerLinkActive="router-link-active"  class="well hoverwell thumbnail">
+  <h2>{{event?.name}}</h2>
+  <div>Date: {{event?.date}}</div>
+  <div [ngSwitch]="event?.time">Time: {{event?.time}}
+    <span *ngSwitchCase="'8:00 am'">(Early Start)</span>
+   <span *ngSwitchCase="'10:00 am'">(Late Start)</span>
+   <span *ngSwitchDefault>(Normal Start)</span>
   </div>
-  <button class="btn btn-primary" (click)="handleClick()">Click Me</button>
+  <div>Price: ${{event?.price}}
+
+  </div>
+  <div *ngIf="event?.location">
+    <span>Loaction: {{event?.location?.address}}</span>
+    <span class="pad-left"></span>
+    <span>{{event?.location?.city}}, {{event?.location?.country}}</span>
+  </div>
+  <div *ngIf="event?.onlineUrl">
+    Online URL: {{event?.onlineUrl}}
+  </div>
+
 
 </div>
+
