--- a/events/src/app/events/events-list.component.html
+++ b/events/src/app/events/events-list.component.html
@@ -1,7 +1,7 @@
  <h1>Upcoming Angular Events </h1>
  <div class="row">
    <div *ngFor="let event of events" class="col-md-5">
-    <app-event-thumbnail (click)="handleThumbnailClick(event.name)"  [event]="event" #thumbnail (eventClick)="handleEventClicked($event)"></app-event-thumbnail>
+    <app-event-thumbnail  [event]="event" #thumbnail (eventClick)="handleEventClicked($event)"></app-event-thumbnail>
    </div>
  </div>
 
