--- a/events/src/app/events/event-details/event-details.component.html
+++ b/events/src/app/events/event-details/event-details.component.html
@@ -3,15 +3,15 @@
 
   <div class="row">
     <div class="col-md-11">
-      <h2>{{event?.name}} </h2>
+      <h2>{{event?.name | uppercase}} </h2>
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-6">
-      <div><strong>Date:</strong> {{event?.date}}</div>
+      <div><strong>Date:</strong> {{event?.date | date:'shortDate'}}</div>
       <div><strong>Time:</strong> {{event?.time}}</div>
-      <div><strong>Price:</strong> ${{event?.price}}</div>
+      <div><strong>Price:</strong> {{event?.price | currency: 'ZW$'}}</div>
     </div>
     <div class="col-md-6">
       <address>
@@ -21,4 +21,30 @@
       </address>
     </div>
   </div>
+  <hr>
+  <div class="row" style="margin-bottom: 5px">
+    <div class="col-md-2">
+      <h3>Sessions</h3>
+    </div>
+    <div class="col-md-7">
+        <div class="btn-group btn-group-sm" style="margin-right: 15px">
+          <button class="btn btn-default" (click)="sortBy='name'" [class.active]="sortBy=='name'">Name</button>
+          <button class="btn btn-default" (click)="sortBy='votes'"  [class.active]="sortBy=='votes'">Votes</button>
+        </div>
+      <div class="btn-group btn-group-sm">
+          <button class="btn btn-default" (click)="filterBy='all'" [class.active]="filterBy==='all'" >All</button>
+          <button class="btn btn-default" (click)="filterBy='beginner'" [class.active]="filterBy==='beginner'" >Beginner</button>
+          <button class="btn btn-default" (click)="filterBy='intermediate'" [class.active]="filterBy==='intermediate'" >Intermediate</button>
+          <button class="btn btn-default" (click)="filterBy='advanced'" [class.active]="filterBy==='advanced'" >Advanced</button>
+
+      </div>
+
+
+    </div>
+    <div class="col-md-2">
+      <a (click)="addSession()">Add Session</a>
+    </div>
+  </div>
+  <app-session-list [sortBy]='sortBy' [filterBy]='filterBy' *ngIf="!addMode" [sessions]='event?.sessions'></app-session-list>
+  <app-create-session *ngIf="addMode" (cancelAddSession)="cancelAddSession($event)" (saveNewSession)="saveNewSession($event)"></app-create-session>
 </div>
