--- a/events/src/app/nav/header.component.html
+++ b/events/src/app/nav/header.component.html
@@ -30,14 +30,21 @@
           </li>
         </ul>
       </div>
-      <form id="searchForm"  class="navbar-form navbar-right"  >
+      <form id="searchForm" (ngSubmit)="searchSessions(searchText)"  class="navbar-form navbar-right"  >
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search Sessions" >
+          <input type="text" [(ngModel)]="searchText" name="searchText" class="form-control" placeholder="Search Sessions" >
         </div>
-        <button class="btn btn-default" >
+        <button class="btn btn-default"  type="submit" modal-trigger="searchResults" >
           Search
         </button>
       </form>
     </div>
   </div>
 </div>
+<app-simple-modal closeOnBodyClick="true" elementId="searchResults" title="Matching Sessions">
+  <div class="list-group">
+    <a class="list-group-item" [routerLink]="['/events', session.eventId]" routerLinkActive="router-link-active"  *ngFor="let session of foundSessions">
+        {{session.name}}
+    </a>
+  </div>
+</app-simple-modal>
