--- a/events/src/app/user/login.component.html
+++ b/events/src/app/user/login.component.html
@@ -21,4 +21,8 @@
 
     <button (click)="cancel()" type="button" class="btn btn-default">Cancel</button>
   </form>
+  <br>
+  <div *ngIf="loginInvalid" class="alert alert-danger">
+    Invalid  Login  Info
+  </div>
 </div>
