--- a/events/src/app/user/profile.component.html
+++ b/events/src/app/user/profile.component.html
@@ -16,6 +16,7 @@
 
       <button  type="submit" class="btn btn-primary">Save</button>
       <button (click)="cancel()" type="button" class="btn btn-default">Cancel</button>
+      <button (click)="logout()" type="button" class="btn btn-warning">Logout</button>
     </form>
   </div>
 </div>
